<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tsp.bupt.ancestree.RegisterActivity" >

    <EditText
        android:id="@+id/registerEMail"
        style="@style/EditTextStyle"
        android:layout_marginTop="50dp"
        android:hint="@string/pleaseinputemail"
        android:inputType="textEmailAddress" >
    </EditText>

    <EditText
        android:id="@+id/registerPSW"
        style="@style/EditTextStyle"
        android:hint="@string/pleaseinputpsw"
        android:inputType="textPassword" >
    </EditText>
    
    <EditText
        android:id="@+id/registerConfirmPSW"
        style="@style/EditTextStyle"
        android:hint="@string/pleaseconfirmpsw"
        android:inputType="textPassword" >
    </EditText>
    
    <EditText
        android:id="@+id/registerLastName"
        android:layout_marginTop="20dp"
        style="@style/EditTextStyle"
        android:hint="@string/lastname"
        android:inputType="textPassword" >
    </EditText>
    
    <EditText
        android:id="@+id/registerFirstName"
        style="@style/EditTextStyle"
        android:hint="@string/firstname"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_marginTop="20dp"
        style="@style/ButtonStyle"
        android:text="@string/register" />

</LinearLayout>
