<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tsp.bupt.ancestree.AddNodeActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/addNodeLastname"
            style="@style/EditTextStyle"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/addNodeFirstname"
            style="@style/EditTextStyle"
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="textPersonName" />

        <LinearLayout
            style="@style/EditTextStyle"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/gender" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/addNodeMaleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onClickAddNodeMaleRadio"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/addNodeFemaleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickAddNodeFemaleRadio"
                    android:text="@string/female" />
            </RadioGroup>
        </LinearLayout>

        <EditText
            android:id="@+id/addNodeBirthday"
            style="@style/EditTextStyle"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/birthday"
            android:onClick="openBirthdayPicker" />

        <Switch
            android:id="@+id/addNodeIsAliveSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:checked="true"
            android:textOff="@string/isdead"
            android:textOn="@string/isalive" />

        <EditText
            android:id="@+id/addNodeDeathday"
            style="@style/EditTextStyle"
            android:ems="10"
            android:hint="@string/deathday"
            android:onClick="openDeathdayPicker"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/addNodeRelationshipLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is" />

            <Spinner
                android:id="@+id/addNodePersonsSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ones" />

            <Spinner
                android:id="@+id/addNodeRelationshipSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:id="@+id/addNodeConfirm"
            style="@style/ButtonStyle"
            android:layout_marginTop="50dp"
            android:onClick="onClickAddNodeConfirm"
            android:text="@string/confirm"
            android:enabled="false" />
    </LinearLayout>

</ScrollView>