<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tsp.bupt.ancestree.LoginActivity" >

    <ImageView
        android:id="@+id/LogoImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/loginEMail"
        style="@style/EditTextStyle"
        android:layout_marginTop="50dp"
        android:hint="@string/pleaseinputemail"
        android:inputType="textEmailAddress" >
    </EditText>

    <EditText
        android:id="@+id/loginPSW"
        style="@style/EditTextStyle"
        android:hint="@string/pleaseinputpsw"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_marginTop="20dp"
        style="@style/ButtonStyle"
        android:text="@string/login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:layout_weight="1">

        <TextView
            android:id="@+id/loginResetPSW"
            style="@style/TextButtonStyle"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/resetpsw" />
        
        <TextView
            android:id="@+id/loginNewUser"
            style="@style/TextButtonStyle"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/newuser" />

    </RelativeLayout>

</LinearLayout>